--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,23 +13,23 @@
         android:theme="@style/Theme.FinalProjek"
         tools:targetApi="31">
         <activity
-            android:name=".Activy.MainActivity"
+            android:name=".Activity.MainActivity"
             android:exported="true" > <intent-filter>
             <action android:name="android.intent.action.MAIN" />
 
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter></activity>
         <activity
-            android:name=".Activy.DaftarActivity"
+            android:name=".Activity.DaftarActivity"
             android:exported="false" />
         <activity
-            android:name=".Activy.LoginActivity"
+            android:name=".Activity.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".Activy.BaseActivity"
+            android:name=".Activity.BaseActivity"
             android:exported="false" />
         <activity
-            android:name=".Activy.IntroActivity"
+            android:name=".Activity.IntroActivity"
             android:exported="true">
 
         </activity>
