--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,17 @@
         android:theme="@style/Theme.FinalProjek"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.ListFoodsActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activity.MainActivity"
-            android:exported="true" > <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter></activity>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".Activity.DaftarActivity"
             android:exported="false" />
@@ -30,9 +35,7 @@
             android:exported="false" />
         <activity
             android:name=".Activity.IntroActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
     </application>
 
 </manifest>
