--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,12 +35,19 @@ android {
 
 dependencies {
 
+    //noinspection UseTomlInstead
     implementation 'androidx.appcompat:appcompat:1.7.0'
+    //noinspection UseTomlInstead
     implementation 'com.google.android.material:material:1.12.0'
+    //noinspection UseTomlInstead
     implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
-    implementation 'com.google.code.gson:gson:2.9.1'
-    implementation 'com.google.firebase:firebase-auth:22.3.0'
-    implementation 'com.google.firebase:firebase-database:20.3.0'
+    //noinspection UseTomlInstead
+    implementation 'com.google.code.gson:gson:2.10.1'
+    //noinspection UseTomlInstead
+    implementation 'com.google.firebase:firebase-auth:23.1.0'
+    //noinspection UseTomlInstead
+    implementation 'com.google.firebase:firebase-database:21.0.0'
+    //noinspection UseTomlInstead
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation libs.activity
     implementation libs.firebase.database
