--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,9 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation libs.activity
     implementation libs.firebase.database
+    implementation libs.ext.junit
+    testImplementation libs.junit.junit
+    androidTestImplementation libs.junit.jupiter
 
 
 }
